--- a/app/views/main.html
+++ b/app/views/main.html
@@ -26,7 +26,7 @@
 		<h3>MVC</h3>
 		<p>MVC meaning Model-View-Controller.</p>
 		<h4>Directive</h4>
-		<div class="panel panel-default">
+		<div class="panel panel-warning">
 			<div class="panel-heading">
 				<h3 class="panel-title">ng-model</h3>
 			</div>
@@ -42,7 +42,7 @@
 				<p>I am a <input type="text" ng-model='inputValue'/> <b>{{inputValue}}</b></p> 
 			</div>
 		</div>
-		<div class="panel panel-default">
+		<div class="panel panel-warning">
 			<div class="panel-heading">
 				<h3 class="panel-title">ng-repeat</h3>
 			</div>
@@ -50,7 +50,7 @@
 				<ul>
 					<li ng-repeat="language in awesomeThings">{{language.name}}</li>
 				</ul>
-				<p><span class="label label-default">bootstrap table model</span></p>
+				<div class="well well-sm well-info">Bootstrap Table Model - Filter <span class="label label-default">orderBy</span></div>
 				<table class="table table-bordered">
 					<thead>
 						<tr>
@@ -60,7 +60,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr ng-repeat="person in persons">
+						<tr ng-repeat="person in persons | orderBy:'name'">
 							<td>{{person.name}}</td>
 							<td>{{person.email}}</td>
 							<td>{{person.phone}}</td>
@@ -83,11 +83,12 @@
 				</form>
 			</div>
 		</div>
-		<div class="panel panel-default">
+		<div class="panel panel-warning">
 			<div class="panel-heading">
 				<h3 class="panel-title">fetching JSON Data</h3>
 			</div>
 			<div class="panel-body" ng-controller="SupplierName">
+			<div class="well well-sm">Search: <input type="text" ng-model="query"> <span class="label label-info">Filtering from the table </span></div>
 				<table class="table table-bordered">
 					<thead>
 						<tr>
@@ -98,7 +99,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr ng-repeat="name in api">
+						<tr ng-repeat="name in api | filter:query">
 							<td>{{name.supplierID}}</td>
 							<td>{{name.contactName}}</td>
 							<td>{{name.city}}</td>
